// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loaded 1`] = `
.c23 {
  box-sizing: border-box;
  width: 80px;
  text-align: center;
}

.c24 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
}

.c24:hover,
.c24:focus {
  background: rgba(255,255,255,0.07);
}

.c24:active {
  background: rgba(255,255,255,0.13);
}

.c24:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c17 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c21 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c22 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  margin-right: 16px;
  padding: 4px;
  font-size: 16px;
}

.c25 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  margin-left: 4px;
  color: rgba(255,255,255,0.72);
  font-size: 14px;
}

.c14 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
  margin-right: 0px;
}

.c14 .c16 {
  color: inherit;
}

.c14:disabled {
  color: rgba(255,255,255,0.36);
}

.c14:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c14:hover:enabled,
.c14:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c14:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c18 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
}

.c18 .c16 {
  color: inherit;
}

.c18:disabled {
  color: rgba(255,255,255,0.36);
}

.c18:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c18:hover:enabled,
.c18:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c18:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c10 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

.c11 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
  align-items: center;
}

.c13 {
  box-sizing: border-box;
  display: flex;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c19 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c19 > thead > tr > th,
.c19 > tbody > tr > th,
.c19 > tfoot > tr > th,
.c19 > thead > tr > td,
.c19 > tbody > tr > td,
.c19 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c19 > thead > tr > th:first-child,
.c19 > tbody > tr > th:first-child,
.c19 > tfoot > tr > th:first-child,
.c19 > thead > tr > td:first-child,
.c19 > tbody > tr > td:first-child,
.c19 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c19 > thead > tr > th:last-child,
.c19 > tbody > tr > th:last-child,
.c19 > tfoot > tr > th:last-child,
.c19 > thead > tr > td:last-child,
.c19 > tbody > tr > td:last-child,
.c19 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c19 > tbody > tr > td {
  vertical-align: middle;
}

.c19 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c19 > thead > tr > th .c16 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c19 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c19 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c19 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c4 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
}

.c3 {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
  overflow: hidden;
  border-radius: 8px;
}

.c15 .c16 {
  font-size: 20px;
}

.c15 .c16:before {
  padding-left: 1px;
}

.c9 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(255,255,255,0.07);
  border-radius: 200px;
}

.c8 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #222C59;
  border-radius: 200px;
}

.c6 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: transparent;
}

.c5 {
  background: #0C143D;
  border-radius: 200px;
  width: 100%;
  height: 32px;
}

.c7 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: #0C143D;
  padding-right: 184px;
}

.c7:hover,
.c7:focus,
.c7:active {
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
}

.c7::placeholder {
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

.c20 tbody > tr > td {
  vertical-align: middle;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Active Sessions
    </div>
  </div>
  <div
    class="c3"
  >
    <nav
      class="c4"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <input
            class="c7"
            placeholder="SEARCH..."
            value=""
          />
          <div
            class="c8"
          >
            <div
              class="c9"
            />
          </div>
        </div>
      </div>
      <div
        class="c10"
        width="100%"
      >
        <div
          class="c11"
        >
          <div
            class="c12"
            color="text.main"
            style="white-space: nowrap; text-transform: uppercase;"
          >
            Showing 
            <strong>
              1
            </strong>
             - 
            <strong>
              7
            </strong>
             of
             
            <strong>
              7
            </strong>
          </div>
        </div>
        <div
          class="c13"
        >
          <button
            class="c14 c15"
            disabled=""
            title="Previous page"
          >
            <span
              class="c16 c17 icon icon-arrow-left-circle "
              font-size="3"
            />
          </button>
          <button
            class="c18 c15"
            disabled=""
            title="Next page"
          >
            <span
              class="c16 c17 icon icon-arrow-right-circle "
              font-size="3"
            />
          </button>
        </div>
      </div>
    </nav>
    <table
      class="c19 c20"
    >
      <thead>
        <tr>
          <th>
            <a>
              Type
              <span
                class="c16 c21 icon icon-chevrons-expand-vertical "
                title="sort items"
              />
            </a>
          </th>
          <th>
            <a>
              Name
              <span
                class="c16 c21 icon icon-chevrons-expand-vertical "
                title="sort items"
              />
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Session ID
          </th>
          <th
            style="cursor: default;"
          >
            Users
          </th>
          <th>
            <a>
              Duration
              <span
                class="c16 c21 icon icon-chevron-up "
                title="sort items asc"
              />
            </a>
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <span
              class="c16 c22 icon icon-kubernetes c16 c22"
              font-size="3"
            />
          </td>
          <td>
            minikube
          </td>
          <td>
            7174aded-340a-4863-b661-7ba52aeb22c8
          </td>
          <td>
            lisa2
          </td>
          <td>
            59 minutes
          </td>
          <td
            align="right"
            height="26px"
          />
        </tr>
        <tr>
          <td>
            <span
              class="c16 c22 icon icon-terminal c16 c22"
              font-size="3"
            />
          </td>
          <td>
            im-a-nodename
          </td>
          <td>
            c7befbb4-3885-4d08-a466-de832a73c3d4
          </td>
          <td>
            lisa2
          </td>
          <td>
            5 seconds
          </td>
          <td
            align="right"
            height="26px"
          >
            <div
              class="c23"
              width="80px"
            >
              <button
                class="c24"
                kind="border"
              >
                Join
                <span
                  class="c16 c25 icon icon-caret-down "
                  color="text.slightlyMuted"
                  font-size="2"
                />
              </button>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <span
              class="c16 c22 icon icon-terminal c16 c22"
              font-size="3"
            />
          </td>
          <td>
            im-a-nodename-2
          </td>
          <td>
            b204924e-6b74-5d92-89ea-d95043a969f1
          </td>
          <td>
            lisa3
          </td>
          <td>
            5 seconds
          </td>
          <td
            align="right"
            height="26px"
          >
            <div
              class="c23"
              width="80px"
            >
              <button
                class="c24"
                kind="border"
              >
                Join
                <span
                  class="c16 c25 icon icon-caret-down "
                  color="text.slightlyMuted"
                  font-size="2"
                />
              </button>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <span
              class="c16 c22 icon icon-terminal c16 c22"
              font-size="3"
            />
          </td>
          <td>
            im-a-nodename-3
          </td>
          <td>
            8830cfe5-369e-5485-9c3d-19cc50e6f548
          </td>
          <td>
            lisa2
          </td>
          <td>
            5 seconds
          </td>
          <td
            align="right"
            height="26px"
          >
            <div
              class="c23"
              width="80px"
            >
              <button
                class="c24"
                kind="border"
              >
                Join
                <span
                  class="c16 c25 icon icon-caret-down "
                  color="text.slightlyMuted"
                  font-size="2"
                />
              </button>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <span
              class="c16 c22 icon icon-desktop c16 c22"
              font-size="3"
            />
          </td>
          <td>
            desktop-2
          </td>
          <td>
            acacfbb4-3885-4d08-a466-de832a73ffac
          </td>
          <td>
            lisa2
          </td>
          <td>
            5 seconds
          </td>
          <td
            align="right"
            height="26px"
          />
        </tr>
        <tr>
          <td>
            <span
              class="c16 c22 icon icon-database c16 c22"
              font-size="3"
            />
          </td>
          <td>
            databse-32
          </td>
          <td>
            2314fbb4-3885-4d08-a466-de832a731222
          </td>
          <td>
            lisa2
          </td>
          <td>
            3 minutes
          </td>
          <td
            align="right"
            height="26px"
          />
        </tr>
        <tr>
          <td>
            <span
              class="c16 c22 icon icon-new-tab c16 c22"
              font-size="3"
            />
          </td>
          <td>
            grafana
          </td>
          <td>
            cafefbb4-3885-4d08-a466-de832a7313131
          </td>
          <td>
            lisa2
          </td>
          <td>
            13 minutes
          </td>
          <td
            align="right"
            height="26px"
          />
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`loaded with CTA 1`] = `
.c3 {
  box-sizing: border-box;
  width: 340px;
}

.c28 {
  box-sizing: border-box;
  width: 80px;
  text-align: center;
}

.c4 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  height: 36px;
}

.c4:hover,
.c4:focus {
  background: #B29DFF;
}

.c4:active {
  background: #C5B6FF;
}

.c4:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c29 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
}

.c29:hover,
.c29:focus {
  background: rgba(255,255,255,0.07);
}

.c29:active {
  background: rgba(255,255,255,0.13);
}

.c29:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c8 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c23 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c27 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  margin-right: 16px;
  padding: 4px;
  font-size: 16px;
}

.c30 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  margin-left: 4px;
  color: rgba(255,255,255,0.72);
  font-size: 14px;
}

.c21 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
  margin-right: 0px;
}

.c21 .c7 {
  color: inherit;
}

.c21:disabled {
  color: rgba(255,255,255,0.36);
}

.c21:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c21:hover:enabled,
.c21:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c21:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c24 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
}

.c24 .c7 {
  color: inherit;
}

.c24:disabled {
  color: rgba(255,255,255,0.36);
}

.c24:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c24:hover:enabled,
.c24:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c24:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c19 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c6 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c17 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

.c18 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
  align-items: center;
}

.c20 {
  box-sizing: border-box;
  display: flex;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c5 {
  text-transform: none;
  width: 100%;
  padding-top: 12px;
  padding-bottom: 12px;
  font-size: 12px;
}

.c9 {
  color: inherit;
  font-weight: 500;
  font-size: 15px;
  margin-right: 4px;
}

.c25 {
  background: #222C59;
  border-spacing: 0;
  font-size: 12px;
  width: 100%;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c25 > thead > tr > th,
.c25 > tbody > tr > th,
.c25 > tfoot > tr > th,
.c25 > thead > tr > td,
.c25 > tbody > tr > td,
.c25 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c25 > thead > tr > th:first-child,
.c25 > tbody > tr > th:first-child,
.c25 > tfoot > tr > th:first-child,
.c25 > thead > tr > td:first-child,
.c25 > tbody > tr > td:first-child,
.c25 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c25 > thead > tr > th:last-child,
.c25 > tbody > tr > th:last-child,
.c25 > tfoot > tr > th:last-child,
.c25 > thead > tr > td:last-child,
.c25 > tbody > tr > td:last-child,
.c25 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c25 > tbody > tr > td {
  vertical-align: middle;
}

.c25 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c25 > thead > tr > th .c7 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c25 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c25 > tbody > tr:not(:last-of-type) > td {
  border-bottom: 1px solid rgba(255,255,255,0.07);
}

.c25 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c11 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
}

.c10 {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
  overflow: hidden;
  border-radius: 8px;
}

.c22 .c7 {
  font-size: 20px;
}

.c22 .c7:before {
  padding-left: 1px;
}

.c16 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(255,255,255,0.07);
  border-radius: 200px;
}

.c15 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #222C59;
  border-radius: 200px;
}

.c13 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: transparent;
}

.c12 {
  background: #0C143D;
  border-radius: 200px;
  width: 100%;
  height: 32px;
}

.c14 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: #0C143D;
  padding-right: 184px;
}

.c14:hover,
.c14:focus,
.c14:active {
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
}

.c14::placeholder {
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

.c26 tbody > tr > td {
  vertical-align: middle;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Active Sessions
    </div>
    <div
      class="c3"
      width="340px"
    >
      <button
        class="c4 c5"
        height="36px"
        kind="primary"
      >
        <div
          class="c6"
        >
          <span
            class="c7 c8 icon icon-unlock c9"
          />
          Join Active Sessions With Teleport Enterprise
        </div>
      </button>
    </div>
  </div>
  <div
    class="c10"
  >
    <nav
      class="c11"
    >
      <div
        class="c12"
      >
        <div
          class="c13"
        >
          <input
            class="c14"
            placeholder="SEARCH..."
            value=""
          />
          <div
            class="c15"
          >
            <div
              class="c16"
            />
          </div>
        </div>
      </div>
      <div
        class="c17"
        width="100%"
      >
        <div
          class="c18"
        >
          <div
            class="c19"
            color="text.main"
            style="white-space: nowrap; text-transform: uppercase;"
          >
            Showing 
            <strong>
              1
            </strong>
             - 
            <strong>
              7
            </strong>
             of
             
            <strong>
              7
            </strong>
          </div>
        </div>
        <div
          class="c20"
        >
          <button
            class="c21 c22"
            disabled=""
            title="Previous page"
          >
            <span
              class="c7 c23 icon icon-arrow-left-circle "
              font-size="3"
            />
          </button>
          <button
            class="c24 c22"
            disabled=""
            title="Next page"
          >
            <span
              class="c7 c23 icon icon-arrow-right-circle "
              font-size="3"
            />
          </button>
        </div>
      </div>
    </nav>
    <table
      class="c25 c26"
    >
      <thead>
        <tr>
          <th>
            <a>
              Type
              <span
                class="c7 c8 icon icon-chevrons-expand-vertical "
                title="sort items"
              />
            </a>
          </th>
          <th>
            <a>
              Name
              <span
                class="c7 c8 icon icon-chevrons-expand-vertical "
                title="sort items"
              />
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Session ID
          </th>
          <th
            style="cursor: default;"
          >
            Users
          </th>
          <th>
            <a>
              Duration
              <span
                class="c7 c8 icon icon-chevron-up "
                title="sort items asc"
              />
            </a>
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <span
              class="c7 c27 icon icon-kubernetes c7 c27"
              font-size="3"
            />
          </td>
          <td>
            minikube
          </td>
          <td>
            7174aded-340a-4863-b661-7ba52aeb22c8
          </td>
          <td>
            lisa2
          </td>
          <td>
            59 minutes
          </td>
          <td
            align="right"
            height="26px"
          />
        </tr>
        <tr>
          <td>
            <span
              class="c7 c27 icon icon-terminal c7 c27"
              font-size="3"
            />
          </td>
          <td>
            im-a-nodename
          </td>
          <td>
            c7befbb4-3885-4d08-a466-de832a73c3d4
          </td>
          <td>
            lisa2
          </td>
          <td>
            5 seconds
          </td>
          <td
            align="right"
            height="26px"
          >
            <div
              class="c28"
              width="80px"
            >
              <button
                class="c29"
                kind="border"
              >
                Join
                <span
                  class="c7 c30 icon icon-caret-down "
                  color="text.slightlyMuted"
                  font-size="2"
                />
              </button>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <span
              class="c7 c27 icon icon-terminal c7 c27"
              font-size="3"
            />
          </td>
          <td>
            im-a-nodename-2
          </td>
          <td>
            b204924e-6b74-5d92-89ea-d95043a969f1
          </td>
          <td>
            lisa3
          </td>
          <td>
            5 seconds
          </td>
          <td
            align="right"
            height="26px"
          >
            <div
              class="c28"
              width="80px"
            >
              <button
                class="c29"
                kind="border"
              >
                Join
                <span
                  class="c7 c30 icon icon-caret-down "
                  color="text.slightlyMuted"
                  font-size="2"
                />
              </button>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <span
              class="c7 c27 icon icon-terminal c7 c27"
              font-size="3"
            />
          </td>
          <td>
            im-a-nodename-3
          </td>
          <td>
            8830cfe5-369e-5485-9c3d-19cc50e6f548
          </td>
          <td>
            lisa2
          </td>
          <td>
            5 seconds
          </td>
          <td
            align="right"
            height="26px"
          >
            <div
              class="c28"
              width="80px"
            >
              <button
                class="c29"
                kind="border"
              >
                Join
                <span
                  class="c7 c30 icon icon-caret-down "
                  color="text.slightlyMuted"
                  font-size="2"
                />
              </button>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <span
              class="c7 c27 icon icon-desktop c7 c27"
              font-size="3"
            />
          </td>
          <td>
            desktop-2
          </td>
          <td>
            acacfbb4-3885-4d08-a466-de832a73ffac
          </td>
          <td>
            lisa2
          </td>
          <td>
            5 seconds
          </td>
          <td
            align="right"
            height="26px"
          />
        </tr>
        <tr>
          <td>
            <span
              class="c7 c27 icon icon-database c7 c27"
              font-size="3"
            />
          </td>
          <td>
            databse-32
          </td>
          <td>
            2314fbb4-3885-4d08-a466-de832a731222
          </td>
          <td>
            lisa2
          </td>
          <td>
            3 minutes
          </td>
          <td
            align="right"
            height="26px"
          />
        </tr>
        <tr>
          <td>
            <span
              class="c7 c27 icon icon-new-tab c7 c27"
              font-size="3"
            />
          </td>
          <td>
            grafana
          </td>
          <td>
            cafefbb4-3885-4d08-a466-de832a7313131
          </td>
          <td>
            lisa2
          </td>
          <td>
            13 minutes
          </td>
          <td
            align="right"
            height="26px"
          />
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
